# SuperScanner

./: .gitignore  CMakeLists.txt  CurrentExecutable.txt  LICENSE  README.md  compileAndRun.sh  config.txt  kernelFilters.lst  runCmake.sh  testAndRun.sh
Resources/language_outside/: de.txt  en.txt
Resources/shader_outside/: empty_fragment_shader.txt  empty_vertex_shader.txt  experimental_fragment_shader.txt  experimental_vertex_shader.txt  o3d_phong_vertex_shader.txt  phong_fragment_shader.txt  phong_vertex_shader.txt  simple_fragment_shader.txt  simple_vertex_shader.txt  wireframe_vertex_shader.txt
Resources/shader_outside/gouraud shading/: phong_fragment_shader.txt  phong_vertex_shader.txt
Resources/shader_outside/phongsave/: phong_fragment_shader.txt  phong_vertex_shader.txt
Resources/shader_outside/raycast/: raycast_fragment_shader.txt  raycast_geometry_shader.txt  raycast_vertex_shader.txt
Resources/shader_outside/simple/: vertex_shader.txt
doc/: buildinfo  cmakeupdate  ld_library_path  o3d12update  threadcom  todo
exe/: Playground.cpp  SuperScanner.cpp  Test.cpp
gitTestData/: S1.txt  S2.txt  S3.txt  S4.txt  S5.txt  testconfig.txt
pchs/: pch.h
src/: EfficientMatch.cpp  EfficientMatch.h  GlobalDefines.h  KokkosHostThreadStuff.h  Oldcode.txt  c_keypoint.cpp  c_keypoint.h  cmakedefines.h  cmakedefines.h.in  frustum.cpp  frustum.h  genCors.cpp  genCors.h  genKps.cpp  genKps.h  match.cpp  match.h  readconfig.cpp  readconfig.h
src/Gui/: PandiaView.cpp  PandiaView.h  Shader.h  geometry.cpp  geometry.h  guiutil.cpp  guiutil.h  guiwindow.cpp  guiwindow.h
src/Gui/imgui-docking/FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h
src/VoxelGrid/: GPUVoxelGrid.cpp  GPUVoxelGrid.h  kokkosFunctions.cpp  kokkosFunctions.h
src/cameras/: CameraKinect.cpp  CameraKinect.h  CameraThreadandInit.cpp  CameraThreadandInit.h  DataCam.cpp  DataCam.h
src/core/: Chunk.cpp  Chunk.h  Frame.cpp  Frame.h  KeypointOptimizer.cpp  KeypointOptimizer.h  KeypointUnit.cpp  KeypointUnit.h  Model.cpp  Model.h  Optimizable.cpp  Optimizable.h  integrate.cpp  integrate.h  reconrun.cpp  reconrun.h  threadCom.cpp  threadCom.h
src/filters/: imufilter.cpp  imufilter.h  kabsch.cpp  kabsch.h  kabschfilter.cpp  kabschfilter.h  reprojection.cpp  reprojection.h
src/postprocessing/: kokkosICP.cpp  kokkosICP.h  postprocessing.cpp  postprocessing.h
src/utils/: coreutil.cpp  coreutil.h  imageutil.cpp  imageutil.h  kokkosUtil.cpp  kokkosUtil.h  matrixutil.cpp  matrixutil.h  scannetutil.cpp  scannetutil.h  visutil.cpp  visutil.h
